--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cached-property==1.5.2
 certifi==2021.5.30
 colorama==0.4.5
 dataclasses==0.8
+et-xmlfile==1.1.0
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.48.2
@@ -17,7 +18,11 @@ Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 Markdown==3.3.7
 numpy==1.19.5
+openpyxl==3.1.3
+pandas==1.1.5
 protobuf==3.19.6
+python-dateutil==2.9.0.post0
+pytz==2024.2
 PyYAML==6.0.1
 rouge==1.0.1
 scipy==1.5.4
@@ -31,4 +36,5 @@ typing_extensions==4.1.1
 Werkzeug==2.0.3
 wincertstore==0.2
 wrapt==1.16.0
+xlrd==2.0.1
 zipp==3.6.0
